--- a/cssexamples/css/style.css
+++ b/cssexamples/css/style.css
@@ -1,7 +1,5 @@
-body{
-background-color: crimson;
-background-color:rgb(0, 89, 255);/*rgb 0-255*/
-backgrounf-color: 
-
-
+body{background-color: lightskyblue;
 }
+h1{font-family: 'Times New Roman', Times, serif;
+}
+h2{font-family:'Times New Roman', Times, serif}
