--- a/cssexamples/css/style.css
+++ b/cssexamples/css/style.css
@@ -1,5 +1,12 @@
 body{background-color: lightskyblue;
 }
 h1{font-family: 'Times New Roman', Times, serif;
+    text-align: center;
 }
-h2{font-family:'Times New Roman', Times, serif}
+h2{font-family:'Times New Roman', Times, serif;
+text-transform: capitalize;
+}
+ul{list-style:square}
+ul li{color:blue}
+li{text-decoration: wavy;}
+a:hover{color: silver;}
