--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ header{
     padding: 20px;
     border-bottom: 5px solid black;
     border-top: 5px solid black;
+    margin: 0px auto;
 }
+
+
+
 
 
